# NostrDevs

./: Cargo.toml  README.md  deploy.sh  index.html  tailwind.config.cjs
src/: lib.rs  main.rs  router.rs
src/components/: event_template.rs  keys.rs  layout.rs  mod.rs  nostr.rs  toast.rs
src/js/: nip07.js
src/models/: auth.rs
src/pages/: event_1.rs  home.rs  mod.rs
styles/: input.css  output.css
