[package]
name = "nostr_devs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
futures = "0.3.30"
gloo = "0.11.0"
nostro2 = "0.1.18"
serde_json = "1.0.115"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["HtmlTextAreaElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo-net = "0.4"
async-channel = "2.2.0"
serde = { version = "1.0.197", features = ["derive"] }
gloo-timers = "0.3.0"
wasm-bindgen-futures = "0.4.42"
